[gd_scene load_steps=4 format=3 uid="uid://2u824sgxcx6t"]

[ext_resource type="Script" path="res://scenes/Game.gd" id="1_46vs2"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="1_nquv3"]
[ext_resource type="Texture2D" uid="uid://c6ff15rva3l5a" path="res://icon.svg" id="3_nnt78"]

[node name="Game" type="Node2D"]
script = ExtResource("1_46vs2")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("1_nquv3")
grid_size_x = 12
grid_size_y = 12

[node name="PlacingSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.54902)
texture = ExtResource("3_nnt78")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="CancelButton" type="Button" parent="GUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -57.0
offset_bottom = 54.0
grow_horizontal = 0
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -81.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0

[node name="HouseButton" type="Button" parent="GUI/HBoxContainer"]
layout_mode = 2
offset_right = 57.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 0
text = "House"

[node name="House2x2Button" type="Button" parent="GUI/HBoxContainer"]
layout_mode = 2
offset_left = 61.0
offset_right = 118.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 0
text = "House
2x2"

[connection signal="pressed" from="GUI/HBoxContainer/HouseButton" to="." method="_on_house_button_pressed"]
[connection signal="pressed" from="GUI/HBoxContainer/House2x2Button" to="." method="_on_house_2x_2_button_pressed"]
